--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         Use your right and left keys to move the paddle to bounce the ball up
         and break the blocks.
       </p>
-      <p>If you miss the ball, your score and blocks will reset.</p>
+      <p>If you miss the ball, your score and the blocks will reset.</p>
+      <button id="close-btn" class="btn">Close</button>
     </div>
+    <canvas id="canvas" width="800" height="600"></canvas>
 
     <script src="/script.js"></script>
   </body>
